--- a/materikorespondensisatu-satu.html
+++ b/materikorespondensisatu-satu.html
@@ -60,57 +60,109 @@
         <div class="row">
       <div class="col-12 col-md-4 col-xl-3">
         <ul class="m-2 px-4 py-3 sticky-top border rounded" style="top: 5rem;">
-          <li><a href="#definisi">Apa itu korespondensi satu-satu</a></li>
-          <li><a href="#cara-menyatakan">Bagaimana menyatakan suatu korespondensi satu-satu</a></li>
-          <li><a href="#banyak">Berapa banyak korespondensi satu-satu</a></li>
+          <li><a href="#definisi">Apa itu fungsi satu-satu</a></li>
+          <li><a href="#cara-menyatakan">Bagaimana menyatakan suatu fungsi satu-satu</a></li>
+          <li><a href="#banyak">Bagaimana menentukan banyaknya fungsi satu-satu</a></li>
         </ul>
       </div>
       <div class="col-12 col-md-8 col-xl-9 order-md-first">
         <h3 id="definisi">
-          Apa itu korespondensi satu-satu?
+          Apa itu fungsi satu-satu?
         </h3>
         <p>
-          <strong>Fungsi satu-satu</strong> adalah fungsi khusus yang memasangkan tepat satu untuk setiap anggota daerah asal maupun daerah kawan. Dengan kata lain, dapat dikatakan bahwa setiap anggota dari daerah asal maupun dari daerah kawan hanya mempunyai satu pasang. Fungsi satu-satu ini bisa disebut dengan <strong>korespondensi satu-satu</strong>
+          <strong>Fungsi satu-satu</strong> adalah fungsi yang memasangkan tepat satu untuk setiap anggota daerah asal
+          maupun daerah kawan, fungsi satu -satu ini juga dikenal dengan korespondensi satu-satu
+          Himpunan A dan himpunan B disebut berfungsi satu-satu apabila setiap anggota himpunan A
+          berpasangan dengan tepat satu anggota himpunan B dan setiap anggota himpunan B
+          berpasangan dengan tepat satu anggota himpunan A. Pada fungsi satu-satu ini, jumlah anggota
+          himpunan A dan B haruslah sama.
         </p>
         <h3 id="cara-menyatakan">
-          Bagaimana menyatakan suatu korespondensi satu-satu?
+          Bagaimana menyatakan suatu fungsi satu-satu?
         </h3>
         <p>
           Misalkan:<br>
-          Ada lima siswa telah memiliki nomor induk sekolah di SMP Semangat 45, kelima siswa tersebut tentunya memiliki nomor induk khusus buat nomor induk masing-masing yang tidak akan dimiliki oleh siswa lain, yakni seperti berikut.<br>
+          Ada lima siswa telah memiliki nomor induk sekolah di SMP Semangat 45, kelima siswa
+          tersebut tentunya memiliki nomor induk khusus buat nomor induk masing-masing yang tidak
+          akan dimiliki oleh siswa lain, yakni seperti berikut.<br>
           Nomor induk Ahmad adalah 219,<br>
           Nomor induk As’ari adalah 279,<br>
           Nomor induk Tohir adalah 292,<br>
           Nomor induk Tauiq adalah 258,<br>
           Nomor induk Wati adalah 224,<br>
-          Apabila A dinyatakan mewakili himpunan siswa, maka anggota himpunan A adalah {Ahmad, 
-          As’ari, Tohir, Tauiq, Wati} dan anggota-anggota himpunan B adalah {219, 224, 258, 279, 292}
+          Apabila A dinyatakan mewakili himpunan siswa, maka anggota himpunan A adalah {Ahmad,
+          As’ari, Tohir, Tauiq, Wati} dan anggota-anggota himpunan B adalah {219, 224, 258, 279, 292},
           sehingga “nomor induk” merupakan relasi yang mungkin dari himpunan A ke himpunan B, dan
           "nama pemilik nomor induk" merupakan relasi yang mugkin dari himpunan B ke himpunan A.<br>
-          <strong>GAMBARRR</strong>
-        </p>
-        <p>
+          <img src="./assets/images/menyatakan-korespondensi.png" alt="menyatakan-korespondensi" width="300"><br>
           Berdasarkan gambar bagian kiri menunjukkan bahwa setiap elemen A memiliki satu pasangan
-          dengan setiap anggota B. Sehingga, <strong>"nomor induk" merupakan relasi dari himpunan A ke B</strong> 
-          yang dapat <strong>disebut</strong> juga <strong>sebagai fungsi (pemetaan)</strong>. <strong>Semua elemen himpunan B</strong> dapat
-          <strong>disebut</strong> sebagai <strong>pemetaan (bayangan)</strong> dari <strong>elemen himpunan A</strong> dan dipasangkan dengan
-          tepat satu oleh anggota himpunan A. Sedangkan yang terjadi pada gambar bagian kana
+          dengan setiap anggota B. Sehingga, <strong>"nomor induk"</strong> merupakan relasi dari <strong>himpunan A ke
+          B</strong> yang dapat <strong>disebut</strong> juga <strong>sebagai fungsi (pemetaan)</strong>. <strong>Semua elemen himpunan B</strong> dapat
+          <strong>disebut</strong> sebagai <strong>pemetaan</strong> (bayangan) dari <strong>elemen himpunan A</strong> dan dipasangkan dengan
+          tepat satu oleh anggota himpunan A. Sedangkan yang terjadi pada gambar bagian kanan
           merupakan kebalikannya. <strong>Pemetaan dua arah</strong> seperti yang ditunjukkan pada gambar diatas
-          dapat juga <strong>disebut</strong> sebagai <strong>fungsi satu-satu(korespondensi satu-satu)</strong>.
+          dapat juga <strong>disebut</strong> sebagai <strong>fungsi satu-satu (korespondensi satu-satu)</strong>.
         </p>
         <h3 id="banyak">
-          Berapa banyak korespondensi satu-satu?
+          Bagaimana menentukan banyaknya fungsi satu-satu?
         </h3>
         <p>
-          Apabila diketahui anggota himpunan A adalah {1, 2, 3} dan anggota himpunan B adalah {a, b, c}. 
-          Relasi dari himpunan A ke B yang mungkin dapat dibentuk sebagai korespondensi satusatu
-          dapat diilustrasikan pada tabel berikut.<br>
-          <strong>DIAGRAMMM</strong>
+          Berikut ini cara untuk menentukan berapa banyaknya fungsi satu-satu dari dua buah himpunan.<br>
+          Misal himpunan A ={a} dan B = {1}. Banyaknya fungsi satu-satu dari A ke B adalah 1.<br>
+          <img src="./assets/images/banyak-korespondensi.png" alt="banyak-korespondensi" width="150"><br>
+          Misal himpunan A ={a,b} dan B = {1,2}. Banyaknya fungsi satu-satu dari A ke B adalah 2.<br>
+          <img src="./assets/images/banyak-korespondensi-2.png" alt="banyak-korespondensi-2" width="150">
+          <img src="./assets/images/banyak-korespondensi-2.png" alt="banyak-korespondensi-2" width="150"><br>
+          Misal himpunan A ={a,b,c} dan B = {1,2,3}. Banyaknya fungsi satu-satu dari A ke B adalah 3.<br>
+          <img src="./assets/images/banyak-korespondensi-3.png" alt="banyak-korespondensi-3" width="150">
+          <img src="./assets/images/banyak-korespondensi-3.png" alt="banyak-korespondensi-3" width="150">
+          <img src="./assets/images/banyak-korespondensi-3.png" alt="banyak-korespondensi-3" width="150"><br>
+          Banyaknya fungsi satu-satu dari A ke B berkaitan erat dengan banyaknya anggota dari masing-masing
+          himpunan. Perhatikan tabel berikut!<br>
+          <table class="table table-bordered">
+            <tbody>
+              <tr>
+                <td><strong>Banyaknya anggota himpunan A</strong></td>
+                <td><strong>Banyaknya anggota himpunan B</strong></td>
+                <td><strong>Banyaknya fungsi satu-satu</strong></td>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>2</td>
+                <td>2 = 1 × 2</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>3</td>
+                <td>6 = 1 × 2 × 3</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>4</td>
+                <td>24 = 1 × 2 × 3 × 4</td>
+              </tr>
+              <tr>
+                <td>...</td>
+                <td>...</td>
+                <td>...</td>
+              </tr>
+              <tr>
+                <td>m</td>
+                <td>n</td>
+                <td>24 = 1 × 2 × 3 × ... × n</td>
+              </tr>
+            </tbody>
+          </table>
         </p>
       </div>
     </div>
-    <fieldset id="question" class="border rounded p-4 pt-0 my-4" x-data="{ answer: null, showAnswer: false }">
-      <legend class="float-none w-auto fs-6 text-body-secondary">Quiz!</legend>
+    <fieldset id="question" class="border rounded p-4 pt-0 my-4" x-data="Banyaknya anggota himpunan { answer: null, showAnswer: false }">
+      <legend class="float-none w-auto fs-6 text-body-secondary"><strong>Quiz!</strong></legend>
       <p>
         Diketahui A = himpunan huruf pembentuk kata CERIA dan B = himpunan huruf vokal. Berapakah banyak korespondensi satu-satu yang dapat dibentuk dari himpunan A dan himpunan B?
       </p>
@@ -134,7 +186,7 @@
         <button class="btn btn-danger mt-4">Jawaban Salah!</button>
       </template>
     </fieldset>
-</div>
+</div><br><br>
 
   <footer>
     <div class="footer container-fluid position-relative bg-light-radial text-white-50 bg-dark mt-5">
