--- a/materirelasi.html
+++ b/materirelasi.html
@@ -60,11 +60,11 @@
         <div class="row">
       <div class="col-12 col-md-4 col-xl-3">
         <ul class="m-2 px-4 py-3 sticky-top border rounded" style="top: 5rem;">
-          <li><a href="#definisi-himpunan">Apa itu himpunan?</a></li>
-          <li><a href="#cara-menyatakan-himpunan">Bagaimana menyatakan suatu himpunan?</a></li>
-          <li><a href="#definisi">Apa itu relasi?</a></li>
-          <li><a href="#pentingnya-relasi">Kenapa relasi penting?</a></li>
-          <li><a href="#cara-menyatakan">Bagaimana menyatakan suatu relasi?</a></li>
+          <li><a href="#definisi-himpunan">Apa itu himpunan</a></li>
+          <li><a href="#cara-menyatakan-himpunan">Bagaimana menyatakan suatu himpunan</a></li>
+          <li><a href="#definisi">Apa itu relasi</a></li>
+          <li><a href="#pentingnya-relasi">Kenapa relasi penting</a></li>
+          <li><a href="#cara-menyatakan">Bagaimana menyatakan suatu relasi</a></li>
         </ul>
       </div>
       <div class="col-12 col-md-8 col-xl-9 order-md-first">
@@ -72,7 +72,15 @@
           Apa itu himpunan?
         </h3>
         <p>
-          <strong>Himpunan</strong> adalah beberapa objek tertentu yang dapat diidentifikasi dengan jelas. Pada himpunan terdapat himpunan yang memuat seluruh anggota tertentu dan dilambangkan dengan huruf S disebut dengan <strong>himpunan semesta</strong>. Keterhubungan himpunan tersebut perlu adanya <strong>kardinalitas himpunan</strong> yang menunjukkan banyaknya anggota himpunan dalam himpunan tertentu dan dinotasikan dengan n(A).
+          Pedagang menjajakan dagangannya dengan harga ditulis di secarik kertas yang berbeda-beda.
+          Dari kejauhan telah terlihat, misalnya dagangan buah duku, ada yang berharga Rp.30.000/kg,
+          ada yang Rp.25.000/kg, dan ada yang Rp.20.000/kg. Para pedagang tersebut melakukan
+          pengelompokan berdasarkan besar-kecilnya (ukuran) duku, yaitu duku besar (kualitas bagus),
+          duku sedang (kualitas sedang), dan duku kecil (kualitas kurang bagus).<br> 
+          Secara tidak kita sadari, sebenarnya pedagang tersebut telah menggunakan konsep himpunan.
+          Mereka membuat himpunan duku besar, himpunan duku sedang, dan himpunan duku kecil.
+          Sehingga, dapat didefinisikan bahwa, <strong>himpunan</strong> adalah sekumpulan atau sekelompok objek
+          yang memiliki ciri sama yang dinyatakan dengan jelas.
         </p>
 
         <h3 id="cara-menyatakan-himpunan">
@@ -80,35 +88,37 @@
         </h3>
         <p>
           Tahukah kamu bahwa bahan baku masakan tersebut dari beras?<br>
-          Namun, beras tersebut dapat dibuat dalam berbagai rasa, bentuk, dan tampilan. Demikian pula, himpunan dapat disajikan dalam beberapa cara tanpa mengubah makna.
-        </p>
-        <p>
-          <strong>1. Himpunan dinyatakan dengan kata-kata (deskripsi)</strong><br>
-          Himpunan dapat direpresentasikan dengan menggambarkan karakteristik yang dimiliki oleh setiap anggota himpunan.<br>
-          Himpunan A = {huruf vokal dalam alfabet}<br>
-          Himpunan B = {bilangan ganjil kurang dari 10}
-        </p>
-        <p>
-          <strong>2. Himpunan dinyatakan dengan menyebutkan anggota (enumerasi)</strong><br>
-          Perhatikan contoh di bawah ini!<br>
-          Himpunan Q = {2, 3, 5, 7, 11, 19}<br>
-          Himpunan R = {2, 4, 6, 8, 10, …, 20}<br>
-          Himpunan S = {…, -3, -2, -1, 0, 1, 2, 3, …}<br>
-          Hubungan pada <strong>himpunan Q dan R dinamakan sebagai himpunan berhingga</strong>. Sedangkan <strong>himpunan S</strong> dinamakan <strong>sebagai himpunan tak berhingga</strong>, karena bilangan terbesar anggota dari himpunan S tidak dapat ditentukan dan tidak dibatasi.
-        </p>
-        <p>
-          <strong>3. Himpunan dinyatakan dengan menggunakan notasi pembuat himpunan</strong><br>
-          Bentuk umum notasi adalah {𝑥|𝑃(𝑥)}, di mana simbol 𝑥 melambangkan anggota himpunan dan 𝑃(𝑥) menyatakan kriteria yang harus dipenuhi 𝑥 agar menjadi anggota himpunan.<br>
-          Himpunan A = {𝑦 | 𝑦 < 15, dengan y merupakan bilangan prima}<br>
-          Himpunan B = {𝑥 | 𝑥 < 10, dan 𝑥 ∈ 𝐴} <br>
-          Himpunan C = {𝑥 | 5 < 𝑥 < 10, dengan 𝑥 merupakan bilangan riil}<br>
+          Namun, beras tersebut dapat dibuat dalam berbagai rasa, bentuk, dan tampilan.<br> 
+          Demikian pula, himpunan dapat disajikan dalam beberapa cara tanpa mengubah makna.<br>
+          Demikian pula, himpunan dapat disajikan dalam beberapa cara tanpa mengubah makna.
+          Sebagai contoh, diberikan sebuah himpunan A yang berisi huruf vokal dalam alfabet. Dalam
+          kasus ini, himpunan A berisi huruf-huruf vokal, yaitu {a,i,u,e,o}. Akan tetapi, himpunan A juga
+          dapat dinyatakan sebagai berikut.<br>
+          A = {a,i,u,e,o}<br>
+          Hal ini, menunjukkan bahwa himpunan A tersebut sebuah himpunan yang memiliki lima
+          anggota, yaitu {a,i,u,e,o} yang merupakan sebuah kumpulan huruf vokal dalam alfabet.
         </p>
 
         <h3 id="definisi">
           Apa itu relasi?
         </h3>
         <p>
-          Relasi dari himpunan A ke himpunan B adalah hubungan antara setiap anggota A dengan anggota B. Relasi A ke B merupakan himpunan bagian dari 𝐴 × 𝐵. Relasi dibedakan dengan istilah: (a)<strong> A sebagai domain</strong>, (b) <strong>B sebagai kodomain</strong>, dan (c) <strong>himpunan bagian dari B yang memiliki pasangan dengan himpunan A disebut sebagai range</strong>.
+          <strong>Relasi</strong> adalah hubungan timbal balik yang terjalin antara dua himpunan atau lebih. Setiap
+          pasangan dalam relasi disebut sebagai pasangan terurut yang terdiri dari dua daerah, yaitu
+          <strong>domain</strong> (daerah asal) dan <strong>kodomain</strong> (daerah kawan). Sedangkan daerah hasil dari relasi
+          tersebut disebut dengan <strong>range</strong>. Misalnya, diberikan sebuah diagram venn sebagai berikut.<br>
+          <img src="./assets/images/apa-itu-relasi.png" alt="Apa itu relasi" width="300"><br>
+          Terdapat himpunan A = {1,2,3} dan B = {a,b,c}, sehingga relasi dari kedua himpunan tersebut
+          adalah {(1,a), (2,b), (3,c)}. Setiap anggota himpunan A memiliki tepat satu pasangan dengan
+          himpunan B, hal ini menunjukkan bahwa himpunan A dan B memiliki hubungan dan disebut
+          sebagai relasi.<br>
+          <img src="./assets/images/apa-itu-relasi-2.png" alt="apa-itu-relasi-2" width="300"><br>
+          Dari gambar di atas bukan relasi. Anggota dari himpunan hasilnya adalah {(1, a), (1,b), (2,c),
+          (3,a)} termasuk ke dalam himpunan pasangan terurut. Namun, relasi ini tidak memenuhi salah
+          satu sifat yang harus dipenuh oleh relasi. Salah satu sifat tersebut adalah setiap anggota dari
+          himpunan domain harus memiliki paling banyak satu pasangan dalam relasi. Namun, dalam
+          contoh ini, anggota 1 memiliki dua pasangan yaitu (1,a) dan (1,b), sehingga contoh ini bukanlah
+          sebuah relasi.
         </p>
 
         <h3 id="pentingnya-relasi">
@@ -156,11 +166,11 @@
           Misalkan <br>
           A = {Alex, Brian, Chris, Dean, Eric}, <br>
           B = {Matematika, IPA, IPS, Bahasa Inggris, Kesenian, Keterampilan, Olahraga} <br>
-          “pelajaran yang disukai” adalah relasi yang menghubungkan himpunan A ke himpunan B. <br>
+          “menyukai” adalah relasi yang menghubungkan himpunan A ke himpunan B. <br>
         </p>
         <p>
           <strong>Cara 1: Diagram Panah </strong><br>
-          Gambar dibawah ini menunjukkan relasi <strong>“pelajaran yang disukai”</strong> dari <strong>himpunan A ke
+          Gambar dibawah ini menunjukkan relasi <strong>“menyukai”</strong> dari <strong>himpunan A ke
             himpunan B</strong>. Arah
           panah menunjukkan anggota-anggota himpunan A yang berelasi dengan anggota-anggota tertentu pada himpunan B.
         </p>
@@ -172,7 +182,7 @@
           Setiap
           pasangan anggota himpunan A yang berelasi dengan anggota himpunan B dinyatakan dengan titik atau noktah.
           Gambar
-          dibawah ini menunjukkan diagram kartesius dari relasi <strong>“pelajaran yang disukai”</strong> dari data pada
+          dibawah ini menunjukkan diagram kartesius dari relasi <strong>“menyukai”</strong> dari data pada
           tabel diatas.
         <p>
           <strong>Cara 3: Himpunan Pasangan Berurutan </strong><br>
@@ -190,7 +200,7 @@
     </div>
 
     <fieldset id="question" class="border rounded p-4 pt-0 my-4" x-data="{ answer: null, showAnswer: false }">
-      <legend class="float-none w-auto fs-6 text-body-secondary">Quiz!</legend>
+      <legend class="float-none w-auto fs-6 text-body-secondary"><strong>Quiz!</strong></legend>
       <p>
         Dikelas 8 SMP belajar matematika terdapat 4 orang siswa yang lebih menyukai pelajaran tertentu.<br>
         • Buyung menyukai pelajaran IPS dan Kesenian<br>
@@ -218,7 +228,7 @@
         bjir
         <button class="btn btn-danger mt-4">Jawaban Salah!</button>
       </template>
-    </fieldset>
+    </fieldset><br><br>
 </div>
 
   <footer>
